<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtBemVindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter"
        android:text="@string/stringBemVindo"
        android:textColor="@color/tema_grey"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIdiomaMain" />

    <TextView
        android:id="@+id/txtBemVindo3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="190dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/app_name"
        android:textColor="@color/tema_2"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnActivityLogin"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/tema_2"
        android:fontFamily="@font/inter"
        android:text="@string/stringLogin"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:background="@color/tema_2"
        app:layout_constraintBottom_toTopOf="@+id/btnActivityCadastro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnActivityCadastro"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/tema_2"
        android:fontFamily="@font/inter"
        android:text="@string/stringCadastro"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:background="@color/tema_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnIdiomaMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icn_translate" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtBemVindo3"
        app:srcCompat="@drawable/logo_season_gems" />

</androidx.constraintlayout.widget.ConstraintLayout>