<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".IdiomaActivity">

    <TextView
        android:id="@+id/txtIdioma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/stringIdiomas"
        android:textColor="@color/tema_2"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltarActivityLanguage" />

    <ImageView
        android:id="@+id/btnVoltarActivityLanguage"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <ImageView
        android:id="@+id/btnPt"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="30dp"
        android:onClick="idiomaPT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdioma"
        app:srcCompat="@drawable/brasil" />

    <ImageView
        android:id="@+id/btnEn"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="60dp"
        android:onClick="idiomaEN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtIdioma"
        app:srcCompat="@drawable/united_states" />

    <TextView
        android:id="@+id/txtNotBanho"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/stringPt"
        android:textAlignment="center"
        android:textColor="@color/tema_grey_claro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPt" />

    <TextView
        android:id="@+id/txtNotFome"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/stringEs"
        android:textAlignment="center"
        android:textColor="@color/tema_grey_claro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEs" />

    <TextView
        android:id="@+id/txtNotSono"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/stringFr"
        android:textAlignment="center"
        android:textColor="@color/tema_grey_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFr" />

    <TextView
        android:id="@+id/txtIt"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:text="@string/stringIt"
        android:textAlignment="center"
        android:textColor="@color/tema_grey_claro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnIt" />

    <TextView
        android:id="@+id/txtNotDivertir"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:text="@string/stringIn"
        android:textAlignment="center"
        android:textColor="@color/tema_grey_claro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEn" />

    <ImageView
        android:id="@+id/btnEs"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:onClick="idiomaES"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotBanho"
        app:srcCompat="@drawable/spain" />

    <ImageView
        android:id="@+id/btnIt"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:onClick="idiomaIT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotFome"
        app:srcCompat="@drawable/italy" />

    <ImageView
        android:id="@+id/btnFr"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        android:onClick="idiomaFR"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNotDivertir"
        app:srcCompat="@drawable/france" />
</androidx.constraintlayout.widget.ConstraintLayout>