<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".CadastroPetActivity">

    <ImageView
        android:id="@+id/btnIdiomaCadastroPet"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icn_translate" />

    <Button
        android:id="@+id/btnCadastraPet"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:layout_marginBottom="60dp"
        android:backgroundTint="@color/tema_2"
        android:fontFamily="@font/inter"
        android:text="@string/stringProx"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:background="@color/tema_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtNomePet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter"
        android:text="@string/stringNomePet"
        android:textColor="@color/tema_grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCadastroPet" />


    <TextView
        android:id="@+id/txtCadastroPet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/stringCadastroPet"
        android:textColor="@color/tema_2"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVoltarMainFromPet" />

    <ImageView
        android:id="@+id/btnVoltarMainFromPet"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/arrow_left" />

    <EditText
        android:id="@+id/campoNomePet"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/rounded_background"
        android:drawableStart="@drawable/pawprint"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/stringDigNomePet"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/tema_grey"
        android:textColorHighlight="@color/tema_2"
        android:textColorHint="@color/tema_grey_claro"
        android:textColorLink="@color/tema_2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNomePet" />

</androidx.constraintlayout.widget.ConstraintLayout>